feat(packages/schemas): refactor validations to a shared package (used in apps/server, packages/api)
